{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 83,
  "lineage": "d20a9cd8-b64c-0709-ff0c-8644837ca470",
  "resources": [
    {
      "mode": "data",
      "type": "azurerm_public_ip",
      "name": "learnazure-ip-data",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/f5b30e46-7d58-4a5a-8532-f7fedeb3af7e/resourceGroups/learn-azure/providers/Microsoft.Network/publicIPAddresses/learn-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.221.137.160",
            "ip_version": "IPv4",
            "location": "southafricanorth",
            "name": "learn-public-ip",
            "resource_group_name": "learn-azure",
            "sku": "Basic",
            "tags": {
              "environment": "dev"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "learn-azure-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/f5b30e46-7d58-4a5a-8532-f7fedeb3af7e/resourceGroups/learn-azure/providers/Microsoft.Network/networkInterfaces/learn-azure-nic",
            "internal_domain_name_suffix": "nv1d0myg4jce1o0dznu4idasdd.jnbx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.123.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/f5b30e46-7d58-4a5a-8532-f7fedeb3af7e/resourceGroups/learn-azure/providers/Microsoft.Network/publicIPAddresses/learn-public-ip",
                "subnet_id": "/subscriptions/f5b30e46-7d58-4a5a-8532-f7fedeb3af7e/resourceGroups/learn-azure/providers/Microsoft.Network/virtualNetworks/learn-vnet/subnets/learn-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "southafricanorth",
            "mac_address": "00-22-48-F8-B8-2E",
            "name": "learn-azure-nic",
            "private_ip_address": "10.123.1.4",
            "private_ip_addresses": [
              "10.123.1.4"
            ],
            "resource_group_name": "learn-azure",
            "tags": {
              "environment": "dev"
            },
            "virtual_machine_id": "/subscriptions/f5b30e46-7d58-4a5a-8532-f7fedeb3af7e/resourceGroups/learn-azure/providers/Microsoft.Compute/virtualMachines/learn-azure-vm"
          },
          "dependencies": [
            "azurerm_public_ip.learn-public-ip",
            "azurerm_resource_group.learn-azure",
            "azurerm_subnet.learn-subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "learn-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f5b30e46-7d58-4a5a-8532-f7fedeb3af7e/resourceGroups/learn-azure/providers/Microsoft.Network/networkSecurityGroups/learn-sg",
            "location": "southafricanorth",
            "name": "learn-sg",
            "resource_group_name": "learn-azure",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "learn-azure-dev-rule",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.learn-azure"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "learn-azure-dev-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/f5b30e46-7d58-4a5a-8532-f7fedeb3af7e/resourceGroups/learn-azure/providers/Microsoft.Network/networkSecurityGroups/learn-sg/securityRules/learn-azure-dev-rule",
            "name": "learn-azure-dev-rule",
            "network_security_group_name": "learn-sg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "learn-azure",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.learn-sg",
            "azurerm_resource_group.learn-azure"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "learn-public-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/f5b30e46-7d58-4a5a-8532-f7fedeb3af7e/resourceGroups/learn-azure/providers/Microsoft.Network/publicIPAddresses/learn-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.221.137.160",
            "ip_version": "IPv4",
            "location": "southafricanorth",
            "name": "learn-public-ip",
            "resource_group_name": "learn-azure",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.learn-azure"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "learn-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.123.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/f5b30e46-7d58-4a5a-8532-f7fedeb3af7e/resourceGroups/learn-azure/providers/Microsoft.Network/virtualNetworks/learn-vnet/subnets/learn-subnet",
            "name": "learn-subnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "learn-azure",
            "virtual_network_name": "learn-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.learn-azure",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "learn-azure-sga",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f5b30e46-7d58-4a5a-8532-f7fedeb3af7e/resourceGroups/learn-azure/providers/Microsoft.Network/virtualNetworks/learn-vnet/subnets/learn-subnet",
            "network_security_group_id": "/subscriptions/f5b30e46-7d58-4a5a-8532-f7fedeb3af7e/resourceGroups/learn-azure/providers/Microsoft.Network/networkSecurityGroups/learn-sg",
            "subnet_id": "/subscriptions/f5b30e46-7d58-4a5a-8532-f7fedeb3af7e/resourceGroups/learn-azure/providers/Microsoft.Network/virtualNetworks/learn-vnet/subnets/learn-subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.learn-sg",
            "azurerm_resource_group.learn-azure",
            "azurerm_subnet.learn-subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.123.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "333d766d-f206-4d44-bb43-cb69e40c121b",
            "id": "/subscriptions/f5b30e46-7d58-4a5a-8532-f7fedeb3af7e/resourceGroups/learn-azure/providers/Microsoft.Network/virtualNetworks/learn-vnet",
            "location": "southafricanorth",
            "name": "learn-vnet",
            "resource_group_name": "learn-azure",
            "subnet": [
              {
                "address_prefix": "10.123.1.0/24",
                "id": "/subscriptions/f5b30e46-7d58-4a5a-8532-f7fedeb3af7e/resourceGroups/learn-azure/providers/Microsoft.Network/virtualNetworks/learn-vnet/subnets/learn-subnet",
                "name": "learn-subnet",
                "security_group": "/subscriptions/f5b30e46-7d58-4a5a-8532-f7fedeb3af7e/resourceGroups/learn-azure/providers/Microsoft.Network/networkSecurityGroups/learn-sg"
              }
            ],
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.learn-azure"
          ]
        }
      ]
    }
  ]
}